# sdl-tutorial

./: CMakeLists.txt  Doxyfile
html/: DestroySdlObjects_8h_source.html  annotated.html  classSplash-members.html  classSplash.html  classes.html  config_8h_source.html  dir_0207e1594d985f3e6e75a8fd73b0dbf0.html  dir_0abdee562046be6f5823d1ca8c3fd13c.html  dir_0e06758d35d3301426789c0a0b9742dd.html  dir_2c1ec4cfaf5ed43ec260b4f91f837847.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5892adf0b118da32e0622dff0c401024.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6b5789e209b8e2397b4e5c5eb0f5e863.html  dir_7720d8c924993a4cab9c238eab61a3e0.html  dir_7b5d38f1875f1b693f62ca6a108a1129.html  dir_864873dc3c8d0796d83a0e2a4bef78cd.html  dir_a41afb44cd77021f04ef0298981be91e.html  dir_a573004c1aa1ac4f8bc48460229ea7de.html  dir_a665a5ffc941b03cad8ad6baf97698bd.html  dir_be343a1ffeddb55d5ac67efda5cd0775.html  dir_d44c64559bbebec7f509842c48db8b23.html  errors_8h_source.html  files.html  res__path_8h_source.html  sdl__utils_8h_source.html  settings_8h_source.html  splash_8h_source.html
html/search/: all_0.js
include/: DestroySdlObjects.h  config.h  errors.h  res_path.h  sdl_utils.h  settings.h  splash.h
l0/: TestResourcePath.cpp
l1/: main.cpp
l2/: main.cpp
l3/: main.cpp
l4/: main.cpp
l6/: main.cpp
latex/: annotated.tex  classSplash.tex  dir_0207e1594d985f3e6e75a8fd73b0dbf0.tex  dir_0abdee562046be6f5823d1ca8c3fd13c.tex  dir_0e06758d35d3301426789c0a0b9742dd.tex  dir_5892adf0b118da32e0622dff0c401024.tex  dir_6b5789e209b8e2397b4e5c5eb0f5e863.tex  dir_7720d8c924993a4cab9c238eab61a3e0.tex  dir_7b5d38f1875f1b693f62ca6a108a1129.tex  dir_864873dc3c8d0796d83a0e2a4bef78cd.tex  dir_a41afb44cd77021f04ef0298981be91e.tex  dir_a573004c1aa1ac4f8bc48460229ea7de.tex  dir_a665a5ffc941b03cad8ad6baf97698bd.tex  dir_be343a1ffeddb55d5ac67efda5cd0775.tex  refman.tex
src/: CMakeLists.txt
src/cleanup/: DestroySdlObjects.cpp
src/config/: settings.h.in
src/utilities/: errors.cpp  res_path.cpp  sdl_utils.cpp
src/widgets/: splash.cpp
